crates/musli-web-macros/tests/ui/invalid-name-error.rs
musli_web_macros::define! {
    type Event;

    type Request;
}

fn main() {}
